planner get함수 추가 및 swagger 수정
